Explicitly select Java version running the build